--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,2 @@
 ---
-juno_yum_repo_file: http://rdo.fedorapeople.org/openstack-juno/rdo-release-juno.rpm
+openstack_yum_repo_file: http://rdo.fedorapeople.org/openstack-juno/rdo-release-juno.rpm
