--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,18 @@
 ---
 - name: Install yum-plugin-priorities
-  yum: name=yum-plugin-priorities state=installed enablerepo=ol7_optional_latest
+  yum: name=yum-plugin-priorities state=installed enablerepo=ol7_optional_latest  
   when: ansible_os_family == "RedHat"
+  
+- name: Install EPEL Repository
+  yum: name={{ epel_yum_repo_file }} state=present
+  
 - name: Setup Openstack Yum Repository
   yum: name={{ openstack_yum_repo_file }} state=installed
   when: ansible_os_family == "RedHat"
+  
 - name: Install Openstack SELinux
   yum: name=openstack-selinux state=installed
   when: ansible_os_family == "RedHat"
+ 
+- name: Update System
+  yum: name=* state=latest
