--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,9 @@ openstack_message_broker_user_pass: openstack
 openstack_keystone_dbname: keystone
 openstack_keystone_db_user_name: keystone
 openstack_keystone_db_user_pass: openstack
+openstack_glance_dbname: glance
+openstack_glance_db_user_name: glance
+openstack_glance_db_user_pass: openstack
 openstack_keystone_admin_token: e4b019a72cb81650d42f
 openstack_admin_tenant_admin_user: admin
 openstack_admin_tenant_admin_pass: admin
