--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,17 @@
 ---
 - name: Install yum-plugin-priorities
   yum: name=yum-plugin-priorities state=installed enablerepo=ol7_optional_latest  
-  when: ansible_os_family == "RedHat"
   
 - name: Install EPEL Repository
   yum: name={{ epel_yum_repo_file }} state=present
-  when: ansible_os_family == "RedHat"   
+  
   
 - name: Setup Openstack Yum Repository
   yum: name={{ openstack_yum_repo_file }} state=installed
-  when: ansible_os_family == "RedHat"
   
 - name: Install Openstack SELinux
   yum: name=openstack-selinux state=installed
-  when: ansible_os_family == "RedHat"
  
-- name: Update System
-  yum: name=* state=latest
-  when: ansible_os_family == "RedHat"  
+#- name: Update System
+#  yum: name=* state=latest
+#  when: ansible_os_family == "RedHat"  
